--- a/BitEdit/index.html
+++ b/BitEdit/index.html
@@ -514,11 +514,28 @@
 <div id="offline-indicator">Offline Mode</div>
 
     <script>
-        /*
-         * BitEdit - MonetizationVars Editor
-         * Copyright (C) 2025 S0methingSomething
-         * This version includes Service Worker, update check, offline indicator, and pre-rendered UI shell.
-         */
+/*
+ * BitEdit - MonetizationVars Editor
+ * Copyright (C) 2025 S0methingSomething
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program (in the LICENSE file). If not,
+ * see <https://www.gnu.org/licenses/>.
+ *
+ * This project is a JavaScript/HTML reimplementation of the logic from
+ * the C# bitlife-edit project by yntha (https://github.com/yntha/bitlife-edit),
+ * which is also licensed under GPLv3.
+ */
 
         // --- App Version (Manually update this when releasing a new version) ---
         // GITHUB_ACTION_MARKER_APP_VERSION (Do not remove or alter this line)
