--- a/BitEdit/index.html
+++ b/BitEdit/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BitEdit - MonetizationVars Editor</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://raw.githubusercontent.com/S0methingSomething/BitEdit/refs/heads/main/BitEdit/output.css" rel="stylesheet">
+    <link href="output.css" rel="stylesheet">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#000000">
     <style>
