--- a/BitEdit/index.html
+++ b/BitEdit/index.html
@@ -297,6 +297,11 @@
              border-color: var(--bg-primary); /* Ensure button border is visible on yellow bg */
         }
     </style>
+    <!-- Counter.dev Analytics Script -->
+    <script src="https://cdn.counter.dev/script.js" data-id="74520b76-a519-45cc-9a4c-891f2c59a0e4" data-utcoffset="8"></script>
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "52269c15b3504cd5a2a5960b53017486"}'></script>
+    <!-- End Cloudflare Web Analytics -->
 </head>
 <body class="flex flex-col items-center p-4 md:p-8">
 
@@ -375,7 +380,7 @@
                 </div>
             </div>
         </div>
-         <div id="error-message" class="mt-4 p-3 rounded-md hidden text-sm" style="background-color: rgba(var(--accent-red-rgb),0.9); color: white; border: 1px solid rgba(var(--accent-red-rgb), 0.7);"></div>
+           <div id="error-message" class="mt-4 p-3 rounded-md hidden text-sm" style="background-color: rgba(var(--accent-red-rgb),0.9); color: white; border: 1px solid rgba(var(--accent-red-rgb), 0.7);"></div>
 
         <div id="progress-flowchart-container" class="flowchart-container-outer flowchart mt-4 hidden">
         </div>
@@ -627,7 +632,7 @@
                 if (latestVersionMatch && latestVersionMatch[2]) {
                     const normalizedLatestVersion = latestVersionMatch[2];
                     localStorage.setItem(LAST_SUCCESSFUL_UPDATE_CHECK_KEY, Date.now().toString());
-                    
+                   
                     if (compareVersions(normalizedLatestVersion, CURRENT_APP_VERSION) > 0) {
                         ui.updateAvailableBanner.innerHTML = `Update to ${normalizedLatestVersion} available! <button id="refresh-update-button">Refresh to Update</button>`;
                         ui.updateAvailableBanner.style.display = 'block';
