--- a/BitEdit/index.html
+++ b/BitEdit/index.html
@@ -541,7 +541,8 @@
  * which is also licensed under GPLv3.
  */
 
-        // --- App Version ---
+        // --- App Version (Manually update this when releasing a new version) ---
+        // GITHUB_ACTION_MARKER_APP_VERSION (Do not remove or alter this line)
         const CURRENT_APP_VERSION = "v1.8.5"; 
 
         // --- Constants ---
